main.css
@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Serif:400,400i,600&display=swap');
:root {
	--colorBg: #fff;
	--colorTxt: #000;
	--baseValue: 1.25rem;
	--fontSize10: var(--baseValue);
	--fontSize20: calc(var(--fontSize10) * 1.25);
	--fontSize30: calc(var(--fontSize20) * 1.25);
	--lineHeightCopy: 1.6;
	--lineHeightHeadline: 1.25;
	--spacing10: calc(var(--fontSize10)*var(--lineHeightCopy));
	--spacing20: calc(var(--spacing10)*1);
	--fontWeight10: 400;
	--fontWeight20: 600;
	--transitionDur10: 100ms;
	--bgImg: none;
}

@media screen and (min-width: 48rem) {
	:root {
		--spacing20: calc(var(--spacing10)*2);
		--lineHeightCopy: 1.8;
	}
}

@media (prefers-color-scheme: dark) {
	:root {
		--colorBg: #000;
		--colorTxt: #fff;
	}
}

html {
	font-size: 100%;
}

body {
	--paddingBody: var(--spacing20);
	margin: 0;
	padding: var(--paddingBody);
	color: var(--colorTxt);
	font-family: 'IBM Plex Serif', 'Times New Roman', serif;
	font-weight: var(--fontWeight10);
	font-size: var(--fontSize10);
	line-height: var(--lineHeightCopy);
	letter-spacing: calc(-1rem / 128);
	-moz-osx-font-smoothing: grayscale;
	-webkit-font-smoothing: antialiased;
	-webkit-font-feature-settings: "liga" 1, "dlig" 1, "onum" 1;
	-moz-font-feature-settings: "liga" 1, "dlig" 1, "onum" 1;
	font-feature-settings: "liga" 1, "dlig" 1, "onum" 1;
	display: flex;
	flex-direction: column;
	flex-wrap: nowrap;
	justify-content: space-between;
	align-content: space-between;
	background-color: var(--colorBg);
}

@media screen and (min-width: 48rem) {
	body {
		min-height: calc(100vh - (var(--paddingBody) * 2));
	}
}

video {
	display: none;
}

@media screen and (min-width: 64rem) {
	video {
		display: block;
		position: fixed;
		top: -10vh;
		left: -10vw;
		width: 120vw;
		height: 120vh;
		object-fit: cover;
		-webkit-filter: contrast(2) blur(1.5rem);
		filter: contrast(2) blur(1.5rem);
		opacity: .2;
	}
}

h1, h2, h3, h4, h5, p {
	margin: 0;
}

a {
	position: relative;
	display: inline-block;
	color: var(--colorTxt);
	font-style: italic;
	text-decoration: none;
	transition: opacity var(--transitionDur10) ease;
}

a::after {
	position: absolute;
	content: '';
	bottom: 0;
	right: 0;
	width: 100%;
	height: .0625rem;
	background-color: var(--colorTxt);
}

a:hover {
	opacity: .6;
	transition: opacity var(--transitionDur10) ease;
}

strong {
	font-style: italic;
	font-weight: var(--fontWeight10);
}

.copy-10 {
	margin-bottom: var(--spacing10);
}

.copy-10:last-child {
	margin-bottom: 0;
}

.headline-10, .headline-20, .headline-30 {
	line-height: var(--lineHeightHeadline);
}

@media screen and (min-width: 80rem) {
	.copy-10, .headline-10, .headline-20, .headline-30 {
		max-width: 60vw;
	}
}

.headline-10 {
	font-size: var(--fontSize10);
	font-weight: var(--fontWeight20);
	margin-top: var(--spacing10);
	margin-bottom: var(--spacing10);
	letter-spacing: calc(-1rem / 64);
}

.headline-20 {
	font-size: var(--fontSize20);
	font-weight: var(--fontWeight20);
	margin-top: var(--spacing10);
	margin-bottom: var(--spacing10);
	letter-spacing: calc(-1rem / 32);
}

.headline-30 {
	font-size: var(--fontSize30);
	font-weight: var(--fontWeight20);
	margin-bottom: var(--spacing10);
	letter-spacing: calc(-1rem / 16);
}

header {
	display: inline-flex;
}

.logo {
	fill: currentColor;
	height: calc(var(--fontSize10)*var(--lineHeightCopy));
	width: auto;
	margin-bottom: var(--spacing10);
}

main {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	align-items: flex-end;
	justify-content: space-between;
}

section:last-child {
	margin-bottom: 0;
}

.cv {
	flex-basis: 100vw;
}

@media screen and (min-width: 64rem) {
	.cv {
		margin-bottom: 0;
		margin-right: var(--spacing20);
		flex-basis: 50vw;
	}
}

footer {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}

footer a {
	margin: var(--spacing10) var(--spacing10) 0 0;
}

footer a:last-child {
	margin-right: 0;
}

